--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,30 +8,30 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <header>
+  <!-- <header> -->
     <!-- <button id="theme-toggle" class="mode-toggle" aria-label="Toggle light/dark mode">
       <span class="icon">🌙</span>
     </button> -->
-  </header>
+  <!-- </header> -->
 <!-- Introduction Section -->
- <div id="retro-background">
-<section id="introduction">
-  <div class="container">
-    <h1>{{ site.title }}</h1>
-    <p>{{ site.description }}</p>
-    <!-- <img src="path_to_your_profile_picture.jpg" alt="Your Name" class="profile-picture"> -->
-  </div>
-</section>
+  <!-- <div id="retro-background">
+ <section id="introduction" style="display: none;">
+   <div class="container">
+     <h1>{{ site.title }}</h1>
+     <p>{{ site.description }}</p>
+     <img src="path_to_your_profile_picture.jpg" alt="Your Name" class="profile-picture">
+   </div>
+ </section> -->
 
 <!-- Navigation Menu -->
-<nav>
+<!-- <nav>
   
   <ul>
-    <li><button class="button" id="load-home">Home</button></li>
+    <li><button class="button" id="load-home">Home</button></li> -->
     <!-- <li><button class="button" id="load-games">Games</button></li> -->
-    <li><button class="button" id="load-about">About</button></li>
+    <!-- <li><button class="button" id="load-about">About</button></li>
   </ul>
-</nav>
+</nav> -->
 
   <!-- Your content here -->
   
