--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,15 +40,23 @@
     </div>
 
   <!-- Contact Information -->
-<section id="contact-info">
+<section id="contact">
   <div class="container">
-    <h2>Contact Me</h2>
-    <ul class="social-links">
-      <li><a href="mailto:jamessmith94135@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/james-s-66067b176/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-      <!-- <li><a href="https://github.com/yourprofile" target="_blank">GitHub</a></li>
-      <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li> -->
-    </ul>
+    <h2>Get In Touch</h2>
+    <div class="contact-info">
+      <div class="contact-item">
+        <i class="fas fa-envelope"></i>
+        <a href="mailto:jamessmith94135@gmail.com">jamessmith94135@gmail.com</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/james-s-66067b176/" target="_blank">LinkedIn Profile</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/JSmith-LDG" target="_blank">GitHub Profile</a>
+      </div>
+    </div>
   </div>
 </section>
 </div>
