--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,15 +46,15 @@
     <div class="contact-info">
       <div class="contact-item">
         <i class="fas fa-envelope"></i>
-        <a href="mailto:jamessmith94135@gmail.com">jamessmith94135@gmail.com</a>
+        <a href="mailto:jamessmith94135@gmail.com"></a>
       </div>
       <div class="contact-item">
         <i class="fab fa-linkedin"></i>
-        <a href="https://www.linkedin.com/in/james-s-66067b176/" target="_blank">LinkedIn Profile</a>
+        <a href="https://www.linkedin.com/in/james-s-66067b176/" target="_blank"></a>
       </div>
       <div class="contact-item">
         <i class="fab fa-github"></i>
-        <a href="https://github.com/JSmith-LDG" target="_blank">GitHub Profile</a>
+        <a href="https://github.com/JSmith-LDG" target="_blank"></a>
       </div>
     </div>
   </div>
