--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,33 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <!-- <header> -->
-    <!-- <button id="theme-toggle" class="mode-toggle" aria-label="Toggle light/dark mode">
-      <span class="icon">🌙</span>
-    </button> -->
-  <!-- </header> -->
-<!-- Introduction Section -->
-  <!-- <div id="retro-background">
- <section id="introduction" style="display: none;">
-   <div class="container">
-     <h1>{{ site.title }}</h1>
-     <p>{{ site.description }}</p>
-     <img src="path_to_your_profile_picture.jpg" alt="Your Name" class="profile-picture">
-   </div>
- </section> -->
-
-<!-- Navigation Menu -->
-<!-- <nav>
-  
-  <ul>
-    <li><button class="button" id="load-home">Home</button></li> -->
-    <!-- <li><button class="button" id="load-games">Games</button></li> -->
-    <!-- <li><button class="button" id="load-about">About</button></li>
-  </ul>
-</nav> -->
-
-  <!-- Your content here -->
-  
+  <!-- Main Content -->
+  <main>
     <div id="content">
       {{ content }}
     </div>
